@@ -1,0 +1,4 @@
+#include "st_i.h"
+int st_synth_getopts(eff_t, int, char * *);
+int st_synth_start(eff_t);
+int st_synth_flow(eff_t, st_sample_t const *, st_sample_t *, st_size_t *, st_size_t *);
